# NMEA_Project

./: README.md  setup_build.sh
gpsd_reader/: CMakeLists.txt  setup_build.sh
gpsd_reader/include/: gpsd.h
gpsd_reader/src/: main.cpp  nmea_parser.cpp  nmea_parser.h
gpsd_reader/test/: sample.nmea
